tests/error/nested_errors/not_defined_if.err
Error: Variable not defined (at $FILE:9:11)
  | 
7 |         def bar() -> int:
8 |             return 0
9 |     return bar()
  |            ^^^ `bar` might be undefined ...
  | 
6 |     if b:
  |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
